src/scss/main.scss
@import "_normalize";
@import "_variables";
@import url("https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap&subset=latin-ext");

html {
    box-sizing: border-box;
}

*,
*:before,
*:after {
    box-sizing: inherit;
}

body {
    color: $black;
    background: $mercury;
    font-family: "Roboto", sans-serif;
}

.add {
    width: 216px;
    height: 47px;
    background: #ffffff;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 4px;
    margin-top: 48px;
    font-weight: 500;
    font-size: 18px;
    line-height: 21px;
}

.button-wrapper {
    display: flex;
    flex-direction: column;
}

.glass {
    &__number {
        position: absolute;
        margin: -180px -38px 0px 110px;
        font-weight: 500;
        font-size: 112px;
        line-height: 131px;
        color: #000000;
    }
    &__path--0 {
        fill: #eceff1;
        clip-path: polygon(8% 100%, 100% 100%, 90% 100%, 6% 100%);
        transition: fill 1s ease-in, clip-path 1s ease-in;
        &:hover {
            fill: blue;
        }
    }
    &__path--1 {
        clip-path: polygon(6% 91%, 100% 91%, 90% 100%, 6% 100%);
        transition: fill 1s ease-in, clip-path 1s ease-in;
    }
    &__path--2 {
        clip-path: polygon(6% 81%, 100% 81%, 90% 100%, 6% 100%);
        transition: fill 1s ease-in, clip-path 1s ease-in;
    }
    &__path--3 {
        clip-path: polygon(6% 71%, 100% 71%, 90% 100%, 6% 100%);
        transition: fill 1s ease-in, clip-path 1s ease-in;
    }
    &__path--4 {
        clip-path: polygon(6% 61%, 100% 61%, 90% 100%, 6% 100%);
        transition: fill 1s ease-in, clip-path 1s ease-in;
    }
    &__path--5 {
        clip-path: polygon(6% 51%, 100% 51%, 90% 100%, 6% 100%);
        transition: fill 1s ease-in, clip-path 1s ease-in;
    }
    &__path--6 {
        clip-path: polygon(4% 41%, 100% 41%, 90% 100%, 6% 100%);
        transition: fill 1s ease-in, clip-path 1s ease-in;
    }
    &__path--7 {
        clip-path: polygon(2% 31%, 100% 31%, 90% 100%, 6% 100%);
        transition: fill 1s ease-in, clip-path 1s ease-in;
    }
    &__path--8 {
        clip-path: polygon(0% 21%, 100% 21%, 90% 100%, 6% 100%);
        transition: fill 1s ease-in, clip-path 1s ease-in;
    }
    &__path--9 {
        clip-path: polygon(0% 0%, 100% 0%, 90% 100%, 0% 100%);
        transition: fill 1s ease-in, clip-path 1s ease-in;
    }
}

.header {
    margin-top: 5vw;
    &__h1 {
        font-weight: 500;
        font-size: 36px;
        line-height: 42px;
        color: #f5e5e7;
    }
}

.link {
    text-align: center;
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    line-height: 16px;
    margin-top: 30px;
    margin-bottom: 20px;
    color: $pourri;
    &:visited {
        color: $pourri;
    }
}

.main {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 812px;
    min-height: 100vh;
    height: 100%;
    width: 100%;
    flex-direction: column;
    background: $azure;
    &--history {
        justify-content: flex-start;
    }
}

.subtract {
    margin-top: 38px;
    background: none;
    color: $pourri;
    border: none;
    padding: 0;
    font: inherit;
    cursor: pointer;
    outline: inherit;
    font-weight: 500;
    font-size: 14px;
    line-height: 16px;
}

.table {
    display: block;
    border-spacing: 0;
    max-height: 500px;
    overflow: auto;
    -webkit-box-shadow: 13px 10px 41px -4px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: 13px 10px 41px -4px rgba(0, 0, 0, 0.75);
    box-shadow: 13px 10px 41px -4px rgba(0, 0, 0, 0.75);
    &__head {
        font-weight: 500;
        font-size: 18px;
        line-height: 21px;
        color: #f5e5e7;
    }
    &__th {
        min-width: 158px;
        height: 56px;
        font-weight: 500;
        font-size: 18px;
        line-height: 21px;
        color: #000000;
        &--head {
            background: #000000;
            color: $pourri;
            position: sticky;
            top: 0;
        }
    }
    &__tr {
        background: #a9aeb6;
        &:nth-child(odd) {
            background: #c4cad3;
        }
    }
}

// On/Off switch from https://proto.io/freebies/onoff/ generator

.onoffswitch {
  margin: 0 25px 4vw 250px;
  position: relative; width: 76px;
  -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
  &__label {
    position: absolute;
    margin: 6px 240px 0 -50px;
    color: $pourri;
  }
}
.onoffswitch-checkbox {
  display: none;
}
.onoffswitch-label {
  display: block; overflow: hidden; cursor: pointer;
  border: 2px solid #999999; border-radius: 4px;
}
.onoffswitch-inner {
  display: block; width: 200%; margin-left: -100%;
  transition: margin 0.3s ease-in 0s;
}
.onoffswitch-inner:before, .onoffswitch-inner:after {
  display: block; float: left; width: 50%; height: 22px; padding: 0; line-height: 22px;
  font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
  box-sizing: border-box;
}
.onoffswitch-inner:before {
  content: "ON";
  padding-left: 12px;
  background-color: #3767AD; color: #FFFFFF;
}
.onoffswitch-inner:after {
  content: "OFF";
  padding-right: 12px;
  background-color: #EEEEEE; color: #999999;
  text-align: right;
}
.onoffswitch-switch {
  display: block; width: 27px; margin: -2.5px;
  background: #FFFFFF;
  position: absolute; top: 0; bottom: 0;
  right: 51px;
  border: 2px solid #999999; border-radius: 4px;
  transition: all 0.3s ease-in 0s; 
}
.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
  margin-left: 0;
}
.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
  right: 0px; 
}

